wednesday morning commit

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,7 +7,9 @@
     <script type="text/javascript" src="../vendors/angular.min.js"></script>
     <script type="text/javascript" src="../vendors/angular-route.min.js"></script>
     <script type="text/javascript" src="../scripts/app.js"></script>
-    </script>
+    <script type="text/javascript" src="../scripts/services/teamFactory.js"></script>
+    <script type="text/javascript" src="../scripts/controllers/tradeController.js"></script>
+    <!-- <script type="text/javascript" src="../scripts/controller/teamFactory.js"></script> -->
     <title>CapFreeze</title>
   </head>
 
