--- a/public/views/templates/home.html
+++ b/public/views/templates/home.html
@@ -3,4 +3,47 @@
 
 <h2>Welcome to CapFreeze!</h2>
 
+<div id="east" class="col-md-6">
+  <div id="atlantic" class="col-md-3">
+    <button ng-click='bruins.getBruinsPlayers()' class='btn' id='3'>Boston Bruins</button>
+    <button ng-click='sabres.getSabresPlayers()' class='btn' id='4'>Buffalo Sabres</button>
+    <button ng-click='redwings.getRedwingsPlayers()' class='btn' id='11'>Detroit Red Wings</button>
+    <button ng-click='panthers.getPanthersPlayers()' class='btn' id='13'>Florida Panthers</button>
+    <button ng-click='canadiens.getCanadiensPlayers()' class='btn' id='16'>Montreal Canadiens</button>
+    <button ng-click='senators.getSenatorsPlayers()' class='btn' id='21'>Ottawa Senators</button>
+    <button ng-click='lightning.getLightningPlayers()' class='btn' id='26'>Tampa Bay Lightning</button>
+    <button ng-click='leafs.getLeafsPlayers()' class='btn' id='27'>Toronto Maple Leafs</button>
+  </div>
+  <div id="metropolitan" class="col-md-3">
+    <button ng-click='hurricanes.getHurricanesPlayers()' class='btn' id='6'>Carolina Hurricanes</button>
+    <button ng-click='jackets.getJacketsPlayers()' class='btn' id='9'>Columbus Blue Jackets</button>
+    <button ng-click='devils.getDevilsPlayers()' class='btn' id='18'>New Jersey Devils</button>
+    <button ng-click='islanders.getIslandersPlayers()' class='btn' id='19'>New York Islanders</button>
+    <button ng-click='rangers.getRangersPlayers()' class='btn' id='20'>New York Rangers</button>
+    <button ng-click='flyers.getFlyersPlayers()' class='btn' id='22'>Philadelphia Flyers</button>
+    <button ng-click='penguins.getPenguinsPlayers()' class='btn' id='23'>Pittsburgh Penguins</button>
+    <button ng-click='capitals.getCapitalsPlayers()' class='btn' id='29'>Washington Capitals</button>
+  </div>
+</div>
+<div id="west" class="col-md-6">
+  <div id="central" class="col-md-3">
+    <button ng-click='blackhawks.getBlackhawksPlayers()' class='btn' id='7'>Chicago Blackhawks</button>
+    <button ng-click='avalanche.getAvalanchePlayers()' class='btn' id='8'>Colorado Avalanche</button>
+    <button ng-click='stars.getStarsPlayers()' class='btn' id='10'>Dallas Stars</button>
+    <button ng-click='wild.getWildPlayers()' class='btn' id='15'>Minnesota Wild</button>
+    <button ng-click='predators.getPredatorsPlayers()' class='btn' id='17'>Nashville Predators</button>
+    <button ng-click='blues.getBluesPlayers()' class='btn' id='25'>Saint Louis Blues</button>
+    <button ng-click='jets.getJetsPlayers()' class='btn' id='30'>Winnipeg Jets</button>
+  </div>
+  <div id="pacific" class="col-md-3">
+    <button ng-click='ducks.getDucksPlayers()' class='btn' id='1'>Anaheim Ducks</button>
+    <button ng-click='coyotes.getCoyotesPlayers()' class='btn' id='2'>Arizona Coyotes</button>
+    <button ng-click='flames.getFlamesPlayers()' class='btn' id='5'>Calgary Flames</button>
+    <button ng-click='oilers.getOilersPlayers()' class='btn' id='12'>Edmonton Oilers</button>
+    <button ng-click='kings.getKingsPlayers()' class='btn' id='14'>Los Angeles Kings</button>
+    <button ng-click='sharks.getSharksPlayers()' class='btn' id='24'>San Jose Sharks</button>
+    <button ng-click='canucks.getCanucksPlayers()' class='btn' id='28'>Vancouver Canucks</button>
+  </div>
+</div>
+
 </div>
