--- a/public/views/templates/nav.html
+++ b/public/views/templates/nav.html
@@ -4,6 +4,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#wild">Minnesota Wild</a></li>
           <li><a href="#lightning">Tampa Bay Lightning</a></li>
+          <li><a href="#trade">Mock Trading</a></li>
         </ul>
     </div>
 </div>
