--- a/public/views/templates/home.html
+++ b/public/views/templates/home.html
@@ -3,8 +3,8 @@
 
 <h2>Welcome to CapFreeze!</h2>
 
-<div id="east" class="col-md-6">
-  <div id="atlantic" class="col-md-3">
+<div id="east" class="col-xs-6">
+  <div id="atlantic" class="col-xs-3">
     <button ng-click='bruins.getBruinsPlayers()' class='btn' id='3'>Boston Bruins</button>
     <button ng-click='sabres.getSabresPlayers()' class='btn' id='4'>Buffalo Sabres</button>
     <button ng-click='redwings.getRedwingsPlayers()' class='btn' id='11'>Detroit Red Wings</button>
@@ -14,7 +14,7 @@
     <button ng-click='lightning.getLightningPlayers()' class='btn' id='26'>Tampa Bay Lightning</button>
     <button ng-click='leafs.getLeafsPlayers()' class='btn' id='27'>Toronto Maple Leafs</button>
   </div>
-  <div id="metropolitan" class="col-md-3">
+  <div id="metropolitan" class="col-xs-3">
     <button ng-click='hurricanes.getHurricanesPlayers()' class='btn' id='6'>Carolina Hurricanes</button>
     <button ng-click='jackets.getJacketsPlayers()' class='btn' id='9'>Columbus Blue Jackets</button>
     <button ng-click='devils.getDevilsPlayers()' class='btn' id='18'>New Jersey Devils</button>
@@ -25,8 +25,8 @@
     <button ng-click='capitals.getCapitalsPlayers()' class='btn' id='29'>Washington Capitals</button>
   </div>
 </div>
-<div id="west" class="col-md-6">
-  <div id="central" class="col-md-3">
+<div id="west" class="col-xs-6">
+  <div id="central" class="col-xs-3">
     <button ng-click='blackhawks.getBlackhawksPlayers()' class='btn' id='7'>Chicago Blackhawks</button>
     <button ng-click='avalanche.getAvalanchePlayers()' class='btn' id='8'>Colorado Avalanche</button>
     <button ng-click='stars.getStarsPlayers()' class='btn' id='10'>Dallas Stars</button>
@@ -35,7 +35,7 @@
     <button ng-click='blues.getBluesPlayers()' class='btn' id='25'>Saint Louis Blues</button>
     <button ng-click='jets.getJetsPlayers()' class='btn' id='30'>Winnipeg Jets</button>
   </div>
-  <div id="pacific" class="col-md-3">
+  <div id="pacific" class="col-xs-3">
     <button ng-click='ducks.getDucksPlayers()' class='btn' id='1'>Anaheim Ducks</button>
     <button ng-click='coyotes.getCoyotesPlayers()' class='btn' id='2'>Arizona Coyotes</button>
     <button ng-click='flames.getFlamesPlayers()' class='btn' id='5'>Calgary Flames</button>
