--- a/public/views/templates/wild.html
+++ b/public/views/templates/wild.html
@@ -1,6 +1,6 @@
 <div class="wild">
   <img src="../../images/wild.png"/>
-  <table>
+  <table align="center">
   <thead>
     <tr>
       <th>Player Name</th>
@@ -19,18 +19,18 @@
   </thead>
   <tbody>
     <tr class='player' ng-repeat='player in wild.wildPlayers'>
-      <td><input type="text" name="name" ng-model="player.name" class='form-control col-md-2'></td>
-      <td><input type="text" name="contract_terms" ng-model="player.contract_terms" class='form-control col-md-1'></td>
-      <td><input type="text" name="position" ng-model="player.position" class='form-control col-md-1'></td>
-      <td><input type="text" name="status" ng-model="player.status" class='form-control col-md-1'></td>
-      <td><input type="text" name="age" ng-model="player.age" class='form-control col-md-1'></td>
-      <td><input type="text" name="AAV_sixteen_seventeen" ng-model="player.AAV_sixteen_seventeen" class='form-control col-md-1'></td>
-      <td><input type="text" name="AAV_seventeen_eighteen" ng-model="player.AAV_seventeen_eighteen" class='form-control col-md-1'></td>
-      <td><input type="text" name="AAV_eighteen_nineteen" ng-model="player.AAV_eighteen_nineteen" class='form-control col-md-1'></td>
-      <td><input type="text" name="AAV_nineteen_twenty" ng-model="player.AAV_nineteen_twenty" class='form-control col-md-1'></td>
-      <td><input type="text" name="AAV_twenty_twentyone" ng-model="player.AAV_twenty_twentyone" class='form-control col-md-1'></td>
-      <td><input type="text" name="AAV_twentyone_twentytwo" ng-model="player.AAV_twentyone_twentytwo" class='form-control col-md-1'></td>
-      <td><input type="text" name="AAV_twentytwo_twentythree" ng-model="player.AAV_twentytwo_twentythree" class='form-control col-md-1'></td>
+      <td>{{ player.name }}</td>
+      <td>{{ player.contract_terms }}</td>
+      <td>{{ player.position }}</td>
+      <td>{{ player.status }}</td>
+      <td>{{ player.age }}</td>
+      <td>{{ player.aav_sixteen_seventeen }}</td>
+      <td>{{ player.aav_seventeen_eighteen }}</td>
+      <td>{{ player.aav_eighteen_nineteen }}</td>
+      <td>{{player.aav_nineteen_twenty}}</td>
+      <td>{{player.aav_twenty_twentyone}}</td>
+      <td>{{player.aav_twentyone_twentytwo}}</td>
+      <td>{{player.aav_twentytwo_twentythree}}</td>
     </tr>
   </tbody>
 </table>
